examples/demos/thermostat/content/StatisticsScrollViewForm.ui.qml
@@ -11,7 +11,7 @@ Check out https://doc.qt.io/qtcreator/creator-quick-ui-forms.html for details on
 import QtQuick
 import QtQuick.Controls
 import QtQuick.Layouts
-import CustomControls
+import ThermostatCustomControls
 import Thermostat
 
 ScrollView {
