examples/demos/thermostat/content/TemperatureSetterDesktopViewForm.ui.qml
@@ -12,7 +12,7 @@ import QtQuick.Controls
 import QtQuick.Layouts
 import QtQuick.Effects
 import Thermostat
-import CustomControls
+import ThermostatCustomControls
 
 Pane {
     width: 1087
