examples/demos/thermostat/content/TemperatureSetterSmallViewForm.ui.qml
@@ -13,7 +13,7 @@ import QtQuick.Controls
 import QtQuick.Layouts
 import QtQuick.Effects
 import Thermostat
-import CustomControls
+import ThermostatCustomControls
 
 Pane {
     width: 400
