examples/demos/thermostat/content/ThermostatViewForm.ui.qml
@@ -12,7 +12,7 @@ import QtQuick
 import QtQuick.Controls
 import QtQuick.Layouts
 import Thermostat
-import CustomControls
+import ThermostatCustomControls
 
 Pane {
     id: root
